--- a/v4_DungeonMode_FightUi_3.html
+++ b/v4_DungeonMode_FightUi_3.html
@@ -93,7 +93,7 @@ hr.sep{border:0;border-top:1px solid #2a2a33;margin:12px 0;opacity:.8}
   position:relative;
   width:min(520px, 92vw);
   aspect-ratio: 2 / 3; /* frame is 1024x1536 */
-  background: url('fight_ui_frame.png') center / contain no-repeat;
+  background: url("fight_ui_frame.png") center / contain no-repeat;
   border-radius:16px;
   overflow:visible;
   filter: drop-shadow(0 18px 30px rgba(0,0,0,.35));
